--- a/bscompanion/src/index.css
+++ b/bscompanion/src/index.css
@@ -221,6 +221,9 @@ body {
   }
 }
 
+/* ------------------------------------------New Page----------------------------------------- */
+/* -----------------------------------------On Boarding--------------------------------------- */
+
 .input-box {
   padding: 10px;
   font-size: 14px;
@@ -370,11 +373,22 @@ body {
   min-height: 100vh;
   width: 100%;
   background-color: #1e1e1e;
-  overflow: hidden;
+  overflow: auto;
   background-image: url("./assets/images/plane.png");
   background-repeat: no-repeat;
   background-position: contain;
   background-size: 52rem;
   background-position-x: 650px;
   background-position-y: -80px;
+}
+
+.onboarding-form {
+  max-width: 600px;
+  height: auto;
+}
+
+.onboarding-form-wrapper {
+  display: flex;
+  justify-content: center;
+  padding-top: 140px;
 }
